lab1/Test/L1-A-7-41.output
Error Type A at Line 25
Error Type A at Line 43
Error Type A at Line 54
Error Type A at Line 64
Error Type A at Line 68
