lab1/Test/L1-A-7-41.cmm
struct NwbcMbjhRHV ;
float a99FJOWq1tA2ley6FiMN 
;
int fkQ5QsEXMVoh ( int L0keCtYooynSn , int xL9G1VH4GoepFINL 
  ) {
  int cFAgORTxpr ;
  int hO07Gw5A0fRcL ;
  int FshZ5CrtgMCweFg ;
  int AqXftSVdfxRMLPH_unRo ;
  int wnRuF51G5Rt7joAPEK ;
  struct {
    int rvVAtAaKo ;
    struct {
      struct {
      }yqC7GI44oXVwtUHpqY7 ;
      int Yi8yT40kGan8HqSf ;
      struct GJX9Kf3t9A5ZAy {
      }pn6UjdWCXazG ;
      int G7WJKGy2 ;
      int lNnCvERYfEJM4Ko9ya ;
    }wrVtwWYRRLA1JVhh ;
    int br6kC ;
    struct bnq Xvvn3o ;
    int YxciV5997uNJrf7ERy ;
  }myjR2ob , nQvfqlW_m8eDsH = d8R_zkrDsY ';
  if ( n7Q )   if ( sM9KCn0IHsJ6iQt )   return QjRX6MhzV9D 
    ;
else {
    int UNLmfrh [ 228699827 ] ;
    while ( bXGKnNsq )     RAR7AUBpv = HmY_mFGDJ5T2ZRPQcb6 
      || jOK && E1_CLzKnd4vpjSRm == TvxkAoYmk056L - ! - 
      v48dJC1Y [ Se_Dabe90xFxN = rrnsZLH2yG4gJ6YqR <= BaXnE3c 
      + mADIYI1 * ! ! - U2pYy5Xu4pOcQfy9YEL ( uBCyvThMdzEoRUvNw_h 
      , wVlz04LlPFx2ZNFl5E < ( p = kGoUEBfb && pBpiP4y55SzSYuSA 
      > VbK_pdFLUD7WqsOJh1 * - HxQJFlFV3 [ l1tAyGeY0fQ || 
      nfxLeypbatxlBvyFUNA && sLFQD2ZqnoW >= qOFqynd1gqP 
      ] / 33472056.475602097 != 1787029342 || aq1 . UBEji64ShMi1oa4Ghx 
      ) ) ] / ef2hfX ( ) ;

  }

}
int WDEmLki3C1au2dCZl7Qo , YJ4HFTM8YoyJzInQ49P @

;
int pk1IqbhZ8F9K1rSM ( ) {
  SxLkEjFpKRbl ;
  lVDB ;
  VuwyxcC0Vv ;
}
int ;
int ;
int ;
int @;
int QWppN2Qb1 ( ) {
  HOBe_IC27uHt5Da5 ;
  B ;
  if ( lIS98BTZoJ )   _9Cmb3nTWuU1 ;
else   if ( PjnXytdq9MMpP )   UwLrq ;


}
int fTIqSwwfEguaQ ( ) {
  while ( HoyU )   YM4HJUZxkL0bupcczBB ;'

{
{
@    }  }}
int Hl ( ) {
}
